Add LibP2P.AnnoucedAddresses to bootstrap peer
Here we provide the config key to setup non-default announce addresses
for a keep-client of type bootstrap.  Leaving this empty, as set in the
config template will use the default value for for announce address.
This value should be overridden when we have a know IP/DNS entry or
entries we want to channel traffic through.

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
@@ -21,7 +21,14 @@
 [LibP2P]
   Seed = "Set by Kube"
   Port = "Set by Kube"
-  NAT = true
+  # AnnouncedAddresses:
+  # Leaving AnnouncedAddresses empty will set a default address to be
+  # announced to the network.  The default address will vary by deploy
+  # conditions.  Set AnnouncedAddresses if you have a known external
+  # IPs or DNS entries you want to route traffic through.
+  # Keep internal environments will use default or be set by Circle
+  # context.
+  AnnouncedAddresses = []
 
 [Storage]
   DataDir = "/tmp"
