--- a/private-testnet/participants/figment/config/keep-client-config.toml
+++ b/private-testnet/participants/figment/config/keep-client-config.toml
@@ -19,8 +19,8 @@
   # AnnouncedAddresses:
   # Leaving AnnouncedAddresses empty will set a default address to be
   # announced to the network.  The default address will vary by deploy
-  # conditions.  Set AnnouncedAddresses if you have a known external
-  # IPs or DNS entries you want to route traffic through.
+  # conditions.  Set AnnouncedAddresses if you have known external IPs
+  # or DNS entries you want to route traffic through.
   AnnouncedAddresses = []
 
 # In the real world this directory should be on persistent storage.
