Add Circle CI test results for contract tests
This is handled by adjusting the mocha test runner in Circle CI to use
the mocha-junit-reporter. Currently this requires some jq voodoo, though
in the future it could use a multi-reporter setup or similar and mocha
6.x to reference the built-in xunit reporter.

npm install now runs during a setup step rather than as part of the test
execution command.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,24 @@ jobs:
       - checkout
       - run: sudo npm install -g ganache-cli@6.4.2
       - run:
+          name: Set up test and test result environment
+          command: |
+            mkdir -p /tmp/test-results/keep-core-contracts
+            cd contracts/solidity
+            npm install
+            # Adjust truffle-config.js to reference the JUnit reporter.
+            echo $(cat truffle-config.js) "console.log(JSON.stringify(module.exports))" | node | \
+              jq '.mocha.reporter|="mocha-junit-reporter" | .mocha.reporterOptions|={mochaFile:"/tmp/test-results/keep-core-contracts/unit-tests.xml"}' > \
+              junit-config.json
+            echo module.exports = >> truffle-config.js
+            cat junit-config.json >> truffle-config.js
+      - run:
           name: Running testrpc
           command: ganache-cli
           background: true
-      - run: cd contracts/solidity && npm install && npm run test
+      - run: cd contracts/solidity && npm run test
+      - store_test_results:
+          path: /tmp/test-results
   generate_docs_solidity:
     docker:
       - image: keepnetwork/nodejs-python-solc:5
