--- a/infrastructure/kube/keep-dev/keep-client-standard-peer.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer.yaml
@@ -32,33 +32,18 @@ spec:
   serviceName: keep-client-standard-peer
   volumeClaimTemplates:
   - metadata:
-      name: keep-client-standard-peer
+      name: keep-client-standard-peer-data
     spec:
       accessModes: [ReadWriteOnce]
       resources:
         requests:
-          storage: 5Mi
+          storage: 512Mi
   template:
     metadata:
       labels:
         app: keep-client
         type: standard-peer
     spec:
-      initContainers:
-      - name: initcontainer-provision-keep-client
-        image: gcr.io/keep-dev-fe24/keep-client-initcontainer
-        env:
-          - name: KEEP_CLIENT_TYPE
-            value: standard
-          - name: KEEP_CLIENT_ETH_ACCOUNT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: eth-account-passphrase
-                key: account-passphrase
-        volumeMounts:
-          - name: keep-client-standard-peer
-            mountPath: /mnt/keep-client/config
-        command: ["node", "/tmp/provision-keep-client.js"]
       containers:
       - name: keep-client-standard-peer
         image: gcr.io/keep-dev-fe24/keep-client
@@ -73,8 +58,45 @@ spec:
           - name: LOG_LEVEL
             value: debug
         volumeMounts:
-          - name: keep-client-standard-peer
+          - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
+          - name: keep-client-standard-peer-data
+            mountPath: /mnt/keep-client/data
+      volumes:
+      - name: keep-client-standard-peer-config
+        persistentVolumeClaim:
+          claimName: keep-client-standard-peer-config
+      - name: keep-client-standard-peer-data
+        persistentVolumeClaim:
+          claimName: keep-client-standard-peer-data
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
+      initContainers:
+      - name: initcontainer-provision-keep-client
+        image: gcr.io/keep-dev-fe24/keep-client-initcontainer
+        env:
+          - name: KEEP_CLIENT_TYPE
+            value: standard
+          - name: KEEP_CLIENT_ETH_ACCOUNT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: eth-account-passphrase
+                key: account-passphrase
+          - name: KEEP_DATA_DIR
+            value: /mnt/keep-client/data
+        volumeMounts:
+          - name: keep-client-standard-peer-config
+            mountPath: /mnt/keep-client/config
+        command: ["node", "/tmp/provision-keep-client.js"]
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: keep-client-standard-peer-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Mi
 
 
