Don't include artifacts for privat testnet
Management of our private testnet invloves generating artifacts for our
participants.  With the way the scripts that do this are structred
they're written to directories that are part of keep-core.  These files
are big tar files, they exceed the limit (150mb) for a commit.  Ignoring
them here.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ keep_accounts
 *.ipynb_checkpoints
 __pycache__
 *.pyc
+
+
+# Private testnet artifacts
+*-keep-client-deployment-bundle.tar.gz
+keep-client-snapshot.tar
