Use multiple volumeClaimTemplates
Combining PersistentVolumeCliams with StatefulSets can have some pretty
gross results. The jist here is that PersistentVolumeClaims have no
assignment until something reuqests the resource.  If a replica from a
StatefulSet requests the resource and their in different AZ's you have
an affinity problem.  If a replica from a StatefulSet with > 1 replica
requests a PersistentVolumeClaim that has ReadWriteOnce permission and
the Claim is already mounted, you get stuck because the second replica
requesting can't mount the volume.  volumeClaimTemplates address this by
acting as a PersistentVolumeClaim controller, assigning a claim or
claims to a replica with unique assignment.

--- a/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
@@ -24,7 +24,7 @@ metadata:
     app: keep-client
     type: standard-peer
 spec:
-  replicas: 5
+  replicas: 4
   selector:
     matchLabels:
       app: keep-client
@@ -38,6 +38,13 @@ spec:
       resources:
         requests:
           storage: 512Mi
+  - metadata:
+      name: keep-client-standard-peer-config
+    spec:
+      accessModes: [ReadWriteOnce]
+      resources:
+        requests:
+          storage: 5Mi
   template:
     metadata:
       labels:
@@ -62,13 +69,6 @@ spec:
             mountPath: /mnt/keep-client/config
           - name: keep-client-standard-peer-data
             mountPath: /mnt/keep-client/data
-      volumes:
-      - name: keep-client-standard-peer-config
-        persistentVolumeClaim:
-          claimName: keep-client-standard-peer-config
-      - name: keep-client-standard-peer-data
-        persistentVolumeClaim:
-          claimName: keep-client-standard-peer-data
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
       initContainers:
       - name: initcontainer-provision-keep-client
@@ -87,16 +87,5 @@ spec:
           - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
         command: ["node", "/tmp/provision-keep-client.js"]
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: keep-client-standard-peer-config
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Mi
 
 
