--- a/infrastructure/kube/keep-test/keep-client-bootstrap-peer-0-statefulset.yaml
+++ b/infrastructure/kube/keep-test/keep-client-bootstrap-peer-0-statefulset.yaml
@@ -1,20 +1,6 @@
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: keep-client-bootstrap-peer-0
-spec:
-  type: LoadBalancer
-  ports:
-  - name: keep-client-bootstrap-peer-0-tcp-port
-    port: 3919
-    targetPort: 3919
-  selector:
-    app: keep-client
-    type: bootstrap-peer-0
----
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
   name: keep-client-bootstrap-peer-0
   labels:
@@ -26,12 +12,56 @@ spec:
     matchLabels:
       app: keep-client
       type: bootstrap-peer-0
+  serviceName: keep-client-bootstrap-peer-0
+  volumeClaimTemplates:
+  - metadata:
+      name: keep-client-bootstrap-peer-0-data
+    spec:
+      accessModes: [ReadWriteOnce]
+      resources:
+        requests:
+          storage: 512Mi
+  - metadata:
+      name: keep-client-bootstrap-peer-0-config
+    spec:
+      accessModes: [ReadWriteOnce]
+      resources:
+        requests:
+          storage: 5Mi
   template:
     metadata:
       labels:
         app: keep-client
         type: bootstrap-peer-0
     spec:
+      containers:
+      - name: keep-client-bootstrap-peer-0
+        image: gcr.io/keep-test-f3e0/keep-client
+        ports:
+          - containerPort: 3919
+        env:
+          - name: KEEP_ETHEREUM_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: eth-account-passphrase
+                key: account-passphrase
+          - name: LOG_LEVEL
+            value: debug
+        volumeMounts:
+          - name: keep-client-bootstrap-peer-0-config
+            mountPath: /mnt/keep-client/config
+          - name: keep-client-bootstrap-peer-0-data
+            mountPath: /mnt/keep-client/data
+          - name: eth-keyfile
+            mountPath: /mnt/eth-data
+        command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
+      volumes:
+      - name: eth-keyfile
+        configMap:
+          name: keep-client-bootstrap-peer-0
+          items:
+            - key: eth-keyfile
+              path: eth-keyfile
       initContainers:
       - name: initcontainer-provision-keep-client
         image: gcr.io/keep-test-f3e0/keep-client-initcontainer
@@ -42,48 +72,10 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: eth-account-passphrase
-                key: eth-account-passphrase
+                key: account-passphrase
+          - name: KEEP_DATA_DIR
+            value: /mnt/keep-client/data
         volumeMounts:
-          - name: keep-client-bootstrap-peer-0
+          - name: keep-client-bootstrap-peer-0-config
             mountPath: /mnt/keep-client/config
         command: ["node", "/tmp/provision-keep-client.js"]
-      containers:
-      - name: keep-client-bootstrap-peer-0
-        image: gcr.io/keep-test-f3e0/keep-client
-        ports:
-          - containerPort: 3919
-        env:
-          - name: LOG_LEVEL
-            value: debug          
-          - name: KEEP_ETHEREUM_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: eth-account-passphrase
-                key: eth-account-passphrase
-        volumeMounts:
-          - name: keep-client-bootstrap-peer-0
-            mountPath: /mnt/keep-client/config
-          - name: eth-keyfile
-            mountPath: /mnt/eth-data
-        command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
-      volumes:
-      - name: keep-client-bootstrap-peer-0
-        persistentVolumeClaim:
-          claimName: keep-client-bootstrap-peer-0
-      - name: eth-keyfile
-        configMap:
-          name: keep-client-bootstrap-peer-0
-          items:
-            - key: eth-keyfile
-              path: eth-keyfile
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: keep-client-bootstrap-peer-0
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Mi
