--- a/infrastructure/kube/keep-test/keep-client-standard-peer-statefulset.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer-statefulset.yaml
@@ -4,11 +4,10 @@ kind: StatefulSet
 metadata:
   name: keep-client-standard-peer
   labels:
-    keel.sh/policy: all
     app: keep-client
     type: standard-peer
 spec:
-  replicas: 5
+  replicas: 4
   selector:
     matchLabels:
       app: keep-client
@@ -16,12 +15,19 @@ spec:
   serviceName: keep-client-standard-peer
   volumeClaimTemplates:
   - metadata:
-      name: keep-client-standard-peer
+      name: keep-client-standard-peer-config
     spec:
       accessModes: [ReadWriteOnce]
       resources:
         requests:
           storage: 5Mi
+  - metadata:
+      name: keep-client-standard-peer-data
+        spec:
+          accessModes: [ReadWriteOnce]
+          resources:
+            requests:
+              storage: 512Mi
   template:
     metadata:
       labels:
@@ -42,8 +48,10 @@ spec:
           - name: LOG_LEVEL
             value: debug
         volumeMounts:
-          - name: keep-client-standard-peer
+          - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
+          - name: keep-client-standard-peer-data
+            mountPath: /mnt/keep-client/data
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
       initContainers:
       - name: initcontainer-provision-keep-client
@@ -56,8 +64,10 @@ spec:
               secretKeyRef:
                 name: eth-account-passphrase
                 key: eth-account-passphrase
+          - name: KEEP_DATA_DIR
+            value: /mnt/keep-client/data
         volumeMounts:
-          - name: keep-client-standard-peer
+          - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
         command: ["node", "/tmp/provision-keep-client.js"]
 
