--- a/infrastructure/kube/keep-dev/eth-tx-ropsten-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/eth-tx-ropsten-statefulset.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: tx
-        image: ethereum/client-go:stable
+        image: ethereum/client-go:v1.9.6
         ports:
           - containerPort: 8545
           - containerPort: 8546
