Clarify Dockerfile configs that were added
Trying to make this less labrynth'y for future generations.

--- a/infrastructure/geth-node/Dockerfile
+++ b/infrastructure/geth-node/Dockerfile
@@ -1,6 +1,9 @@
+# Be explicit about the ethereum go client installed
 FROM ethereum/client-go:v1.9.6
 MAINTAINER "Thesis.co"
 
+# Install dependencies required for downstream commands
+# These commands can be here, in geth-init.sh or run-geth.sh
 RUN apk add --no-cache --update git
 RUN apk add --no-cache --update python
 RUN apk add --no-cache --update build-base
@@ -9,7 +12,7 @@ RUN apk add --no-cache --update bash
 RUN apk add --no-cache --update jq
 RUN apk add --no-cache --update curl
 
-# configure log rotation
+# Configure log rotation
 
 RUN npm install pm2 -g
 RUN pm2 install pm2-logrotate
@@ -17,12 +20,12 @@ RUN pm2 set pm2-logrotate:max_size 100M
 RUN pm2 set pm2-logrotate:compress true
 RUN pm2 set pm2-logrotate:rotateInterval '23 * * *'
 
-# install code to report in at the registry of the bootnode (dashboard)
+# Install code to report in at the registry of the bootnode (dashboard)
 RUN git clone https://github.com/lispmeister/bootnode-registrar.git /root/lib/bootnode
 WORKDIR /root/lib/bootnode
 RUN npm install
 
-# install ethStatsApi to report local stats to dashboard
+# Install ethStatsApi to report local stats to dashboard
 RUN git clone https://github.com/lispmeister/eth-net-intelligence-api.git /root/lib/ethStatsApi
 WORKDIR /root/lib/ethStatsApi
 RUN npm install
@@ -30,9 +33,10 @@ RUN npm install
 # Change to /root before provisioning our services
 WORKDIR /root
 
+# Setup target dir for geth data
 RUN mkdir .geth
 
-# copy passphrase file
+# Copy passphrase file
 COPY testnet-account-passphrase.txt passphrase
 
 # Copy keystore
@@ -44,7 +48,7 @@ COPY genesis-template.json genesis-template.json
 COPY geth-init.sh geth-init.sh
 RUN /root/geth-init.sh
 
-# provision our three services (check app.json for details)
+# Provision our three services (check app.json for details)
 COPY app.json app.json
 COPY run-geth.sh run-geth.sh
 
