--- a/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
@@ -67,6 +67,8 @@ spec:
                 key: account-passphrase
           - name: KEEP_DATA_DIR
             value: /mnt/keep-client/data
+          - name: KEEP_NETWORK_BOOTSTRAP_PEERS
+            value: "[/dns4/keep-client-bootstrap-peer-0.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm9RGTm8VGne5PvZGAw9KYNDggHaEQh5wiGSKgibp2G95r]"
         volumeMounts:
           - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
