--- a/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer-statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
     app: keep-client
     type: standard-peer
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: keep-client
@@ -57,6 +57,7 @@ spec:
       initContainers:
       - name: initcontainer-provision-keep-client
         image: gcr.io/keep-dev-fe24/keep-client-initcontainer
+        imagePullPolicy: Always
         env:
           - name: KEEP_CLIENT_TYPE
             value: standard
@@ -68,7 +69,7 @@ spec:
           - name: KEEP_DATA_DIR
             value: /mnt/keep-client/data
           - name: KEEP_NETWORK_BOOTSTRAP_PEERS
-            value: "[/dns4/keep-client-bootstrap-peer-0.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm9RGTm8VGne5PvZGAw9KYNDggHaEQh5wiGSKgibp2G95r]"
+            value: '[/dns4/keep-client-bootstrap-peer-0.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm9RGTm8VGne5PvZGAw9KYNDggHaEQh5wiGSKgibp2G95r]'
         volumeMounts:
           - name: keep-client-standard-peer-config
             mountPath: /mnt/keep-client/config
