--- a/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0-statefulset.yaml
@@ -53,22 +53,24 @@ spec:
             mountPath: /mnt/keep-client/config
           - name: keep-client-bootstrap-peer-0-data
             mountPath: /mnt/keep-client/data
-          - name: eth-keyfile
-            mountPath: /mnt/eth-data
+          - name: eth_account_keyfile
+            mountPath: /mnt/keep-client/config/eth_account_keyfile
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
       volumes:
-      - name: eth-keyfile
+      - name: eth_account_keyfile
         configMap:
           name: keep-client-bootstrap-peer-0
           items:
-            - key: eth-keyfile
-              path: eth-keyfile
+            - key: eth_account_keyfile
+              path: eth_account_keyfile
       initContainers:
       - name: initcontainer-provision-keep-client
         image: gcr.io/keep-dev-fe24/keep-client-initcontainer
         env:
           - name: KEEP_CLIENT_TYPE
             value: bootstrap
+          - name: KEEP_CLIENT_ETH_ACCOUNT
+            value: "0xA86c468475EF9C2ce851Ea4125424672C3F7e0C8"
           - name: KEEP_CLIENT_ETH_ACCOUNT_PASSWORD
             valueFrom:
               secretKeyRef:
@@ -76,6 +78,8 @@ spec:
                 key: account-passphrase
           - name: KEEP_DATA_DIR
             value: /mnt/keep-client/data
+          - name: KEEP_NETWORK_BOOTSTRAP_PEERS
+            value: '[]'
         volumeMounts:
           - name: keep-client-bootstrap-peer-0-config
             mountPath: /mnt/keep-client/config
