--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ config.*.toml
 *.account
 pkg/**/gen/*/*.go
 !pkg/chain/gen/cmd/cmd*.go
+!pkg/chain/gen/options/options*.go
 
 # Executables
 debug
