--- a/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0-statefulset.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0-statefulset.yaml
@@ -53,11 +53,11 @@ spec:
             mountPath: /mnt/keep-client/config
           - name: keep-client-bootstrap-peer-0-data
             mountPath: /mnt/keep-client/data
-          - name: eth_account_keyfile
-            mountPath: /mnt/keep-client/config/eth_account_keyfile
+          - name: eth-account-keyfile
+            mountPath: /mnt/keep-client/eth
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
       volumes:
-      - name: eth_account_keyfile
+      - name: eth-account-keyfile
         configMap:
           name: keep-client-bootstrap-peer-0
           items:
@@ -70,7 +70,9 @@ spec:
           - name: KEEP_CLIENT_TYPE
             value: bootstrap
           - name: KEEP_CLIENT_ETH_ACCOUNT
-            value: "0xA86c468475EF9C2ce851Ea4125424672C3F7e0C8"
+            value: '0xA86c468475EF9C2ce851Ea4125424672C3F7e0C8'
+          - name: KEEP_CLIENT_ETH_KEYFILE
+            value: '/mnt/keep-client/eth/eth_account_keyfile'
           - name: KEEP_CLIENT_ETH_ACCOUNT_PASSWORD
             valueFrom:
               secretKeyRef:
@@ -78,8 +80,6 @@ spec:
                 key: account-passphrase
           - name: KEEP_DATA_DIR
             value: /mnt/keep-client/data
-          - name: KEEP_NETWORK_BOOTSTRAP_PEERS
-            value: '[]'
         volumeMounts:
           - name: keep-client-bootstrap-peer-0-config
             mountPath: /mnt/keep-client/config
