--- a/infrastructure/kube/keep-dev/files/keep-client-0-config.toml
+++ b/infrastructure/kube/keep-dev/files/keep-client-0-config.toml
@@ -1,10 +1,10 @@
 [ethereum]
-  URL = "http://eth-tx.ropsten.svc.cluster.local:8546"
-  URLRPC = "http://eth-tx.ropsten.svc.cluster.local:8545"
+  URL = "https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5"
+  URLRPC = "https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5"
 
   [ethereum.account]
-    Address = ""
-    KeyFile = ""
+    Address = "0x7fb43a257bf74904a41506fe38c87d32d91a77ae"
+    KeyFile = "/mnt/keep-client/config/eth_account_keyfile"
 
   [ethereum.ContractAddresses]
     # Hex-encoded address of KeepRandomBeaconOperator contract
@@ -18,7 +18,7 @@
 
 [LibP2P]
   Peers = []
-  Port = "3919"
+  Port = 3919
   # AnnouncedAddresses:
   # Leaving AnnouncedAddresses empty will set a default address to be
   # announced to the network.  The default address will vary by deploy
