--- a/infrastructure/kube/keep-dev/keep-client-0-ropsten-configmap.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-0-ropsten-configmap.yaml
@@ -13,16 +13,16 @@ data:
 
       [ethereum.ContractAddresses]
         # Hex-encoded address of KeepRandomBeaconOperator contract
-        KeepRandomBeaconOperator = "0x5Fb87812C312557f4F714093d71235316Eaf4582"
+        KeepRandomBeaconOperator = "0xd827DBbb5E70249B15Fa06C16072F91300b122bF"
         # TokenStaking
-        TokenStaking = "0x09D3e8E6300B4FC9f6B477F948c5532461bd8dAd"
+        TokenStaking = "0xDFCD401cCFf45Ad92e7091fc0e21157500D0673a"
         # Hex-encoded address of KeepRandomBeaconService contract. Only needed
         # in cases where the client's utility functions will be used (e.g., the
         # relay subcommand).
-        KeepRandomBeaconService = "0x40e6f6060708A48F01eDFEe7EF2D5964a132A0Ee"
+        KeepRandomBeaconService = "0x3f3da6d75392bC36FD75dC31342B1E213EA992E0"
 
     [LibP2P]
-      Peers = []
+      Peers = ["/ip4/10.102.1.94/tcp/3919/ipfs/16Uiu2HAmHT8KUYvA2a83YH6JjaV7pz1C8gVVE7eUREae3KAGCzrX"]
       Port = 3919
       # AnnouncedAddresses:
       # Leaving AnnouncedAddresses empty will set a default address to be
@@ -37,10 +37,10 @@ kind: ConfigMap
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","data":{"eth_account_keyfile":"{\"address\":\"7fb43a257bf74904a41506fe38c87d32d91a77ae\",\"crypto\":{\"cipher\":\"aes-128-ctr\",\"ciphertext\":\"06e25c201f46831a566ad39bd07671ea3b656c4670ccbf67655d8eefb43b2c02\",\"cipherparams\":{\"iv\":\"18a09a1c22fa8d492bcd6925f00f1e88\"},\"kdf\":\"scrypt\",\"kdfparams\":{\"dklen\":32,\"n\":262144,\"p\":1,\"r\":8,\"salt\":\"7a01afa3a7dfde62d1805d0991bdb3d83085803cae699dbbae0a124437773ee7\"},\"mac\":\"504728d4482b4ae9fa0df029dda9858090c426fa02bcae4b45185b5fa2b2a3be\"},\"id\":\"eeb35695-0225-45a8-80eb-8665f50969d0\",\"version\":3}","eth_account_password":"doughnut_armenian_parallel_firework_backbite_employer_singlet","keep-client-config.toml":"[ethereum]\n  URL = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n  URLRPC = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n\n  [ethereum.account]\n    Address = \"0x7fb43a257bf74904a41506fe38c87d32d91a77ae\"\n    KeyFile = \"/mnt/keep-client/config/eth_account_keyfile\"\n\n  [ethereum.ContractAddresses]\n    # Hex-encoded address of KeepRandomBeaconOperator contract\n    KeepRandomBeaconOperator = \"0x5Fb87812C312557f4F714093d71235316Eaf4582\"\n    # TokenStaking\n    TokenStaking = \"0x09D3e8E6300B4FC9f6B477F948c5532461bd8dAd\"\n    # Hex-encoded address of KeepRandomBeaconService contract. Only needed\n    # in cases where the client's utility functions will be used (e.g., the\n    # relay subcommand).\n    KeepRandomBeaconService = \"0x40e6f6060708A48F01eDFEe7EF2D5964a132A0Ee\"\n\n[LibP2P]\n  Peers = []\n  Port = 3919\n  # AnnouncedAddresses:\n  # Leaving AnnouncedAddresses empty will set a default address to be\n  # announced to the network.  The default address will vary by deploy\n  # conditions.  Set AnnouncedAddresses if you have known external IPs\n  # or DNS entries you want to route traffic through.\n  AnnouncedAddresses = []\n\n[Storage]\n  DataDir = \"/mnt/keep-client/data\""},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"keep-client-0","namespace":"ropsten"}}
+      {"apiVersion":"v1","data":{"eth_account_keyfile":"{\"address\":\"7fb43a257bf74904a41506fe38c87d32d91a77ae\",\"crypto\":{\"cipher\":\"aes-128-ctr\",\"ciphertext\":\"06e25c201f46831a566ad39bd07671ea3b656c4670ccbf67655d8eefb43b2c02\",\"cipherparams\":{\"iv\":\"18a09a1c22fa8d492bcd6925f00f1e88\"},\"kdf\":\"scrypt\",\"kdfparams\":{\"dklen\":32,\"n\":262144,\"p\":1,\"r\":8,\"salt\":\"7a01afa3a7dfde62d1805d0991bdb3d83085803cae699dbbae0a124437773ee7\"},\"mac\":\"504728d4482b4ae9fa0df029dda9858090c426fa02bcae4b45185b5fa2b2a3be\"},\"id\":\"eeb35695-0225-45a8-80eb-8665f50969d0\",\"version\":3}","eth_account_password":"doughnut_armenian_parallel_firework_backbite_employer_singlet","keep-client-config.toml":"[ethereum]\n  URL = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n  URLRPC = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n\n  [ethereum.account]\n    Address = \"0x7fb43a257bf74904a41506fe38c87d32d91a77ae\"\n    KeyFile = \"/mnt/keep-client/config/eth_account_keyfile\"\n\n  [ethereum.ContractAddresses]\n    # Hex-encoded address of KeepRandomBeaconOperator contract\n    KeepRandomBeaconOperator = \"0xd827DBbb5E70249B15Fa06C16072F91300b122bF\"\n    # TokenStaking\n    TokenStaking = \"0xDFCD401cCFf45Ad92e7091fc0e21157500D0673a\"\n    # Hex-encoded address of KeepRandomBeaconService contract. Only needed\n    # in cases where the client's utility functions will be used (e.g., the\n    # relay subcommand).\n    KeepRandomBeaconService = \"0x3f3da6d75392bC36FD75dC31342B1E213EA992E0\"\n\n[LibP2P]\n  Peers = [\"/ip4/10.102.1.94/tcp/3919/ipfs/16Uiu2HAmHT8KUYvA2a83YH6JjaV7pz1C8gVVE7eUREae3KAGCzrX\"]\n  Port = 3919\n  # AnnouncedAddresses:\n  # Leaving AnnouncedAddresses empty will set a default address to be\n  # announced to the network.  The default address will vary by deploy\n  # conditions.  Set AnnouncedAddresses if you have known external IPs\n  # or DNS entries you want to route traffic through.\n  AnnouncedAddresses = []\n\n[Storage]\n  DataDir = \"/mnt/keep-client/data\""},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"keep-client-0","namespace":"ropsten"}}
   creationTimestamp: "2019-11-13T15:35:39Z"
   name: keep-client-0
   namespace: ropsten
-  resourceVersion: "81383446"
+  resourceVersion: "81441647"
   selfLink: /api/v1/namespaces/ropsten/configmaps/keep-client-0
   uid: 3eecae9f-062b-11ea-9d01-4201ac100009
