--- a/eth-networks/ropsten/scripts/package.json
+++ b/eth-networks/ropsten/scripts/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "web3": "1.0.0-beta.55",
-    "@google-cloud/storage": "3.2.1"
+    "@google-cloud/storage": "3.2.1",
+    "@truffle/hdwallet-provider": "^1.0.25",
+    "web3": "1.0.0-beta.55"
   }
 }
