--- a/infrastructure/kube/keep-dev/keep-client-3-ropsten-configmap.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-3-ropsten-configmap.yaml
@@ -4,8 +4,8 @@ data:
   eth_account_password: doughnut_armenian_parallel_firework_backbite_employer_singlet
   keep-client-config.toml: |-
     [ethereum]
-      URL = "https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5"
-      URLRPC = "https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5"
+      URL = "ws://eth-tx-light-rpc-ws.ropsten.svc.cluster.local:8546"
+      URLRPC = "http://eth-tx-light-rpc-ws.ropsten.svc.cluster.local:8545"
 
       [ethereum.account]
         Address = "0x186ab1ed890e341c9c882ba20459fd4f6ef18a30"
@@ -22,7 +22,8 @@ data:
         KeepRandomBeaconService = "0x3f3da6d75392bC36FD75dC31342B1E213EA992E0"
 
     [LibP2P]
-      Peers = []
+      Peers = ["/dns4/keep-client-1.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmHT8KUYvA2a83YH6JjaV7pz1C8gVVE7eUREae3KAGCzrX", "/dns4/keep-client-2.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAkvTsVErCJYgCKY9xCAkXrya1VxDQVDRGmxsxuKnkeJhPx", "/dns4/keep-client-4.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmH77PqABP4HEsMhKCAPgb8M249Gg3EAscUBRDX9p7wASF",
+      "/dns4/keep-client-0.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmLHcD6666j58EfGmgy11mdTn1cMYrRmMsMUhXiVQMsxac"]
       Port = 3919
       # AnnouncedAddresses:
       # Leaving AnnouncedAddresses empty will set a default address to be
@@ -37,10 +38,10 @@ kind: ConfigMap
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","data":{"eth_account_keyfile":"{\"address\":\"186ab1ed890e341c9c882ba20459fd4f6ef18a30\",\"crypto\":{\"cipher\":\"aes-128-ctr\",\"ciphertext\":\"187b40f59df6cc94d8b2a7e7ce1c1f3c7483154450f464f0290753d50ab667b3\",\"cipherparams\":{\"iv\":\"7db4b579fd82e0415b270425ff3d9632\"},\"kdf\":\"scrypt\",\"kdfparams\":{\"dklen\":32,\"n\":262144,\"p\":1,\"r\":8,\"salt\":\"0310913d09dfd9cff86257ff221e408fe38d068e778aa13c2cf0a6affb302c3b\"},\"mac\":\"90c3ae99134b263af45616b27132d71fc5ededd5d3956efc563795fc00926696\"},\"id\":\"4456579d-a1b5-4989-848e-8909b5934a56\",\"version\":3}","eth_account_password":"doughnut_armenian_parallel_firework_backbite_employer_singlet","keep-client-config.toml":"[ethereum]\n  URL = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n  URLRPC = \"https://ropsten.infura.io/v3/59fb36a36fa4474b890c13dd30038be5\"\n\n  [ethereum.account]\n    Address = \"0x186ab1ed890e341c9c882ba20459fd4f6ef18a30\"\n    KeyFile = \"/mnt/keep-client/config/eth_account_keyfile\"\n\n  [ethereum.ContractAddresses]\n    # Hex-encoded address of KeepRandomBeaconOperator contract\n    KeepRandomBeaconOperator = \"0xd827DBbb5E70249B15Fa06C16072F91300b122bF\"\n    # TokenStaking\n    TokenStaking = \"0xDFCD401cCFf45Ad92e7091fc0e21157500D0673a\"\n    # Hex-encoded address of KeepRandomBeaconService contract. Only needed\n    # in cases where the client's utility functions will be used (e.g., the\n    # relay subcommand).\n    KeepRandomBeaconService = \"0x3f3da6d75392bC36FD75dC31342B1E213EA992E0\"\n\n[LibP2P]\n  Peers = []\n  Port = 3919\n  # AnnouncedAddresses:\n  # Leaving AnnouncedAddresses empty will set a default address to be\n  # announced to the network.  The default address will vary by deploy\n  # conditions.  Set AnnouncedAddresses if you have known external IPs\n  # or DNS entries you want to route traffic through.\n  AnnouncedAddresses = []\n\n[Storage]\n  DataDir = \"/mnt/keep-client/data\""},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"keep-client-3","namespace":"ropsten"}}
+      {"apiVersion":"v1","data":{"eth_account_keyfile":"{\"address\":\"186ab1ed890e341c9c882ba20459fd4f6ef18a30\",\"crypto\":{\"cipher\":\"aes-128-ctr\",\"ciphertext\":\"187b40f59df6cc94d8b2a7e7ce1c1f3c7483154450f464f0290753d50ab667b3\",\"cipherparams\":{\"iv\":\"7db4b579fd82e0415b270425ff3d9632\"},\"kdf\":\"scrypt\",\"kdfparams\":{\"dklen\":32,\"n\":262144,\"p\":1,\"r\":8,\"salt\":\"0310913d09dfd9cff86257ff221e408fe38d068e778aa13c2cf0a6affb302c3b\"},\"mac\":\"90c3ae99134b263af45616b27132d71fc5ededd5d3956efc563795fc00926696\"},\"id\":\"4456579d-a1b5-4989-848e-8909b5934a56\",\"version\":3}","eth_account_password":"doughnut_armenian_parallel_firework_backbite_employer_singlet","keep-client-config.toml":"[ethereum]\n  URL = \"ws://eth-tx-light-rpc-ws.ropsten.svc.cluster.local:8546\"\n  URLRPC = \"http://eth-tx-light-rpc-ws.ropsten.svc.cluster.local:8545\"\n\n  [ethereum.account]\n    Address = \"0x186ab1ed890e341c9c882ba20459fd4f6ef18a30\"\n    KeyFile = \"/mnt/keep-client/config/eth_account_keyfile\"\n\n  [ethereum.ContractAddresses]\n    # Hex-encoded address of KeepRandomBeaconOperator contract\n    KeepRandomBeaconOperator = \"0xd827DBbb5E70249B15Fa06C16072F91300b122bF\"\n    # TokenStaking\n    TokenStaking = \"0xDFCD401cCFf45Ad92e7091fc0e21157500D0673a\"\n    # Hex-encoded address of KeepRandomBeaconService contract. Only needed\n    # in cases where the client's utility functions will be used (e.g., the\n    # relay subcommand).\n    KeepRandomBeaconService = \"0x3f3da6d75392bC36FD75dC31342B1E213EA992E0\"\n\n[LibP2P]\n  Peers = [\"/dns4/keep-client-1.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmHT8KUYvA2a83YH6JjaV7pz1C8gVVE7eUREae3KAGCzrX\", \"/dns4/keep-client-2.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAkvTsVErCJYgCKY9xCAkXrya1VxDQVDRGmxsxuKnkeJhPx\", \"/dns4/keep-client-4.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmH77PqABP4HEsMhKCAPgb8M249Gg3EAscUBRDX9p7wASF\",\n  \"/dns4/keep-client-0.ropsten.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmLHcD6666j58EfGmgy11mdTn1cMYrRmMsMUhXiVQMsxac\"]\n  Port = 3919\n  # AnnouncedAddresses:\n  # Leaving AnnouncedAddresses empty will set a default address to be\n  # announced to the network.  The default address will vary by deploy\n  # conditions.  Set AnnouncedAddresses if you have known external IPs\n  # or DNS entries you want to route traffic through.\n  AnnouncedAddresses = []\n\n[Storage]\n  DataDir = \"/mnt/keep-client/data\""},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"keep-client-3","namespace":"ropsten"}}
   creationTimestamp: "2019-11-13T14:34:53Z"
   name: keep-client-3
   namespace: ropsten
-  resourceVersion: "81440478"
+  resourceVersion: "81729753"
   selfLink: /api/v1/namespaces/ropsten/configmaps/keep-client-3
   uid: c1993bbf-0622-11ea-9d01-4201ac100009
