Add utils for getting signers and contracts
These utils can be used to replace functionalities that
hardhat-deploy-ethers exposes.

--- a/solidity/random-beacon/tsconfig.json
+++ b/solidity/random-beacon/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "files": ["./hardhat.config.ts"],
-  "include": ["./deploy", "./test", "./typechain"],
+  "include": ["./deploy", "./test", "./typechain", "./utils"],
   "compilerOptions": {
     "esModuleInterop": true,
     "noImplicitAny": true
