Invoke npm publish on deploy scripts update
We want to invoke fresh package publication when deploy scripts got
changed.

--- a/.github/workflows/npm-random-beacon.yml
+++ b/.github/workflows/npm-random-beacon.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - "solidity/random-beacon/contracts/**"
+      - "solidity/random-beacon/deploy/**"
       - "solidity/random-beacon/hardhat.config.ts"
       - "solidity/random-beacon/package.json"
       - "solidity/random-beacon/yarn.lock"
