Define just the names of required contracts
We don't need to define the paths to the solidity source files as this
can be simplified and we can look for the contract file names.

--- a/pkg/chain/v2/common/Makefile
+++ b/pkg/chain/v2/common/Makefile
@@ -1,10 +1,8 @@
 # Solidity files prefixed with the solidity directory path.
 solidity_files := $(addprefix ${solidity_dir}/,${solidity_files_sources}) 
 
-# Bare Solidity filenames without .sol or Solidity directory prefix.
-contract_stems := $(notdir $(basename ${solidity_files}))
 # Go bindings generated for the solidity contracts.
-contract_files := $(addprefix contract/,$(addsuffix .go,${contract_stems}))
+contract_files = $(addprefix contract/,$(addsuffix .go,${required_contracts}))
 
 # Function to run solidity sources comilation.
 # Expects two arguments:
