Update directories structure
Move code out ouf `v2` directory.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ export.json
 
 # TypeScript
 typechain/
+
+# Go bindings generator
+pkg/chain/*/gen/_solidity/*
+!pkg/chain/*/gen/_solidity/package.json
+!pkg/chain/*/gen/_solidity/yarn.lock
