Additional configs for ts in /scripts & .gitignore

--- a/solidity/random-beacon/tsconfig.json
+++ b/solidity/random-beacon/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "files": ["./hardhat.config.ts"],
-  "include": ["./deploy", "./test", "./typechain", "./utils"],
+  "include": ["./deploy", "./test", "./typechain", "./utils", "./scripts"],
   "compilerOptions": {
     "esModuleInterop": true,
     "noImplicitAny": true
