Add a deploy script for Ropsten network

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-artifacts
-cache
-coverage/
-node_modules
-scripts/examples/example_dist_generated.json
-scripts/examples/example_proof_generated.json
+node_modules/
+
+artifacts/
+build/
+cache/
+deployments/
+export/
+export.json
+
+external/npm
+
+typechain/
+
+yarn-error.log
+
+.vscode/
+
+.hardhat/*
+!.hardhat/networks_TEMPLATE.ts
+
+# OpenZeppelin
+.openzeppelin/unknown-*.json
+
 .env
-.DS_Store
-coverage.json
