--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
@@ -18,7 +19,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.1",
     "fast-check": "^2.23.2",
-    "hardhat": "^2.9.1",
+    "hardhat": "^2.9.9",
     "hardhat-deploy": "^0.11.1",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
