--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,4 @@ export.json
 typechain/
 
 # Go bindings generator
-pkg/chain/*/gen/_solidity/*
-!pkg/chain/*/gen/_solidity/package.json
-!pkg/chain/*/gen/_solidity/yarn.lock
+pkg/chain/*/gen/_contracts/*
