Use npm pack output as filename to untar
Npm pack outputs a filename that we can use in tar command to extract
it.

--- a/pkg/chain/common/gen/Makefile
+++ b/pkg/chain/common/gen/Makefile
@@ -23,8 +23,8 @@ clean:
 
 download_artifacts:
 	rm -rf ${contracts_dir} && mkdir ${contracts_dir}
-	npm pack --pack-destination=${contracts_dir} ${npm_package_name}@${npm_package_tag}
-	tar -zxf ${contracts_dir}/*.tgz -C ${contracts_dir}
+	npm pack --pack-destination=${contracts_dir} ${npm_package_name}@${npm_package_tag}\
+		| xargs -I{} tar -zxf ${contracts_dir}/{} -C ${contracts_dir}
 
 gen_contract_go: ${contract_files}
 
